fix github alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,6 +182,11 @@ a.social:hover {
 .linkedin:hover {
 	background-position: -228px -50px;
 }
+.foot .row {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 10px 0;
+}
 
 /*
  * Pages
@@ -221,6 +226,19 @@ ol.faq-list ul a,
 /*
  * Components
  */
+ 
+ .center {
+    text-align: center;
+    width: 100%;
+}
+ 
+.page-container img {
+    max-width: 100%;
+}
+
+.clone-us p {
+    line-height: 1.2em;
+}
 
 a.icon {
     border-bottom: none;
